# PeptideMassScanner

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/scanner/: app_error.rs  config.rs  io.rs  mod.rs  protein.rs  types.rs
tests/data/: BSA.txt  GGAAKK.txt  MMP-26.fasta  invalid.fasta  multiple_sequences.fasta  test_invalid.txt  test_valid.txt
