[package]
name = "mass_scanner"
version = "0.1.1"
edition = "2021"
author = "Oliver Wissett"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"]}
lazy_static = "1.4.0"
bio = "0.41.0"
csv = "1.1.6"